--- a/MyApplication/app/build.gradle
+++ b/MyApplication/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 repositories {
     flatDir { dirs 'libs' }
+    mavenCentral()
 }
 
 android {
@@ -12,12 +13,12 @@ android {
             storePassword '123456'
         }
     }
-    compileSdkVersion 25
+    compileSdkVersion 24
     buildToolsVersion "25.0.3"
     defaultConfig {
         applicationId "com.example.gaofei.myapplication"
         minSdkVersion 15
-        targetSdkVersion 25
+        targetSdkVersion 24
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -45,10 +46,11 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
     //    compile(name:'mylibrary-release',ext:'aar')
 //    compile project(':mylibrary')
     compile files('libs/classes.jar')
+    compile 'com.android.support:recyclerview-v7:24.2.1'
 }
