--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -2,18 +2,28 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.gaofei.myapplication">
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
 
     <application
         android:allowBackup="true"
         android:supportsRtl="true"
         android:name=".MainApplication"
+        android:icon="@mipmap/icon"
         tools:replace="android:name"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
 
         </activity>
         <activity android:name=".SkipAct" ></activity>
-        <activity android:name="com.example.gaofei.myapplication.act.KeyboardAct" android:theme="@style/AppTheme.NoActionBar" android:windowSoftInputMode="adjustPan">
+        <activity android:name="com.example.gaofei.myapplication.act.ExceptionAct" android:theme="@style/AppTheme.NoActionBar" android:windowSoftInputMode="adjustPan">
+        </activity>
+        <activity android:name="com.example.gaofei.myapplication.webview.WebviewActivity"  android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
