--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         android:name=".MainApplication"
         android:allowBackup="true"
         android:icon="@mipmap/icon"
+        android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:replace="android:name">
