--- a/MyApplication/app/build.gradle
+++ b/MyApplication/app/build.gradle
@@ -54,4 +54,7 @@ dependencies {
     compile files('libs/classes.jar')
     compile 'com.android.support:recyclerview-v7:24.2.1'
     compile 'com.google.code.gson:gson:2.4'
+    compile 'io.reactivex.rxjava2:rxjava:2.0.7'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    compile 'com.airbnb.android:lottie:2.1.0'
 }
