--- a/MyApplication/app/build.gradle
+++ b/MyApplication/app/build.gradle
@@ -57,4 +57,6 @@ dependencies {
     compile 'io.reactivex.rxjava2:rxjava:2.0.7'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'com.airbnb.android:lottie:2.1.0'
+    compile 'com.facebook.stetho:stetho:1.5.0'
+    compile 'com.facebook.stetho:stetho-okhttp3:1.5.0'
 }
