--- a/MyApplication/app/build.gradle
+++ b/MyApplication/app/build.gradle
@@ -39,6 +39,9 @@ android {
         // but continue the build even when errors are found:
         abortOnError false
     }
+    dataBinding {
+        enabled = true
+    }
 }
 
 dependencies {
