--- a/MyApplication/app/build.gradle
+++ b/MyApplication/app/build.gradle
@@ -13,12 +13,12 @@ android {
             storePassword '123456'
         }
     }
-    compileSdkVersion 24
-    buildToolsVersion "25.0.3"
+    compileSdkVersion 25
+    buildToolsVersion "26.0.1"
     defaultConfig {
         applicationId "com.example.gaofei.myapplication"
         minSdkVersion 15
-        targetSdkVersion 24
+        targetSdkVersion 25
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -62,4 +62,5 @@ dependencies {
     compile 'com.airbnb.android:lottie:2.1.0'
     compile 'com.facebook.stetho:stetho:1.5.0'
     compile 'com.facebook.stetho:stetho-okhttp3:1.5.0'
+    compile project(':mylibrary2')
 }
