--- a/MyApplication/mylibrary/src/main/AndroidManifest.xml
+++ b/MyApplication/mylibrary/src/main/AndroidManifest.xml
@@ -1,13 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.mylibrary">
 
-    <application android:allowBackup="true"
-        android:icon="@drawable/signup_illus_student"
-        android:label="@string/app_name"
-
-        android:supportsRtl="true" android:name=".MyApplication" >
-        <activity android:name=".MainAct"/>
+    <application android:supportsRtl="true" android:allowBackup="true" >
     </application>
 
 </manifest>
