--- a/MyApplication/app2/src/main/AndroidManifest.xml
+++ b/MyApplication/app2/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.gaofei.app2">
 
-    <application android:allowBackup="true" android:icon="@mipmap/ic_launcher"
+    <application android:allowBackup="true" android:icon="@mipmap/icon"
         android:label="@string/app_name" android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true" android:theme="@style/AppTheme"
         android:name="com.gaofei.app2.App2Application">
