--- a/MyApplication/app2/src/main/AndroidManifest.xml
+++ b/MyApplication/app2/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.gaofei.app2">
 
     <application android:allowBackup="true" android:icon="@mipmap/icon"
-        android:label="@string/app_name" android:roundIcon="@mipmap/ic_launcher_round"
+        android:label="@string/app_name" android:roundIcon="@mipmap/icon"
         android:supportsRtl="true" android:theme="@style/AppTheme"
         android:name="com.gaofei.app2.App2Application">
         <activity android:name="com.gaofei.app2.Test2Activity">
