--- a/MyApplication/app/build.gradle
+++ b/MyApplication/app/build.gradle
@@ -65,4 +65,5 @@ dependencies {
     compile 'com.facebook.stetho:stetho:1.5.0'
     compile 'com.facebook.stetho:stetho-okhttp3:1.5.0'
     compile project(':commonLibrary')
+    compile 'com.jaredrummler:android-processes:1.0.9'
 }
