--- a/MyApplication/app/build.gradle
+++ b/MyApplication/app/build.gradle
@@ -14,7 +14,6 @@ android {
         }
     }
     compileSdkVersion 25
-    buildToolsVersion "26.0.1"
     defaultConfig {
         applicationId 'com.gaofei.app'
         minSdkVersion 15
@@ -47,23 +46,16 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    testCompile 'junit:junit:4.12'
-    //    compile(name:'mylibrary-release',ext:'aar')
-    //    compile project(':mylibrary')
-    compile files('libs/classes.jar')
-    compile 'com.android.support:recyclerview-v7:24.2.1'
-    compile 'com.google.code.gson:gson:2.4'
-    compile 'io.reactivex.rxjava2:rxjava:2.0.7'
-    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    compile 'com.airbnb.android:lottie:2.1.0'
-    compile 'com.facebook.stetho:stetho:1.5.0'
-    compile 'com.facebook.stetho:stetho-okhttp3:1.5.0'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'com.android.support:appcompat-v7:25.3.1'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:recyclerview-v7:25.3.1'
+    implementation 'com.google.code.gson:gson:2.4'
+    implementation 'io.reactivex.rxjava2:rxjava:2.0.7'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    implementation 'com.airbnb.android:lottie:2.1.0'
+    implementation 'com.facebook.stetho:stetho:1.5.0'
+    implementation 'com.facebook.stetho:stetho-okhttp3:1.5.0'
     compile project(':commonLibrary')
-    compile 'com.jaredrummler:android-processes:1.0.9'
+    implementation 'com.jaredrummler:android-processes:1.0.9'
 }
