--- a/MyApplication/app2/build.gradle
+++ b/MyApplication/app2/build.gradle
@@ -23,6 +23,10 @@ android {
     }
     productFlavors {
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
