--- a/MyApplication/app/build.gradle
+++ b/MyApplication/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 repositories {
     flatDir { dirs 'libs' }
     mavenCentral()
@@ -60,4 +61,5 @@ dependencies {
     implementation 'com.facebook.stetho:stetho-okhttp3:1.5.0'
     compile project(':commonLibrary')
     implementation 'com.jaredrummler:android-processes:1.0.9'
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
