--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -38,7 +38,7 @@
         <activity android:name="com.gaofei.app.act.LayoutAct" android:launchMode="singleTask"/>
         <activity android:name="com.gaofei.app.act.BroadcastReceiverAct" />
         <activity android:name="com.gaofei.app.act.SetUpAct" />
-        <activity android:name="com.gaofei.app.act.ProcessAct"  android:process=":process" />
+        <activity android:name="com.gaofei.app.act.ProcessAct"   />
         <activity android:name="com.gaofei.app.act.PermissionAct" />
         <activity android:name="com.gaofei.app.act.ReflectAct" />
         <activity android:name="com.gaofei.app.act.TouchEventAct" />
@@ -47,6 +47,7 @@
         <activity android:name="com.gaofei.app.act.EditTextAct" />
         <activity android:name="com.gaofei.app.act.DataBindingAct" />
         <activity android:name="com.gaofei.app.act.TaskActivity" />
+        <activity android:name="com.gaofei.app.act.BarrageAnimationAct" />
 
         <receiver android:name="com.gaofei.app.broadcast.BroadcastReceiverTest" >
             <intent-filter>
