--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -49,6 +49,7 @@
         <activity android:name="com.gaofei.app.act.TaskActivity" />
         <activity android:name=".CanvasActivity" android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name="com.gaofei.app.act.BarrageAnimationAct" android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name="com.gaofei.app.act.ClockSetUpActivity" />
 
         <receiver android:name="com.gaofei.app.broadcast.BroadcastReceiverTest" >
             <intent-filter>
