--- a/MyApplication/build.gradle
+++ b/MyApplication/build.gradle
@@ -6,6 +6,8 @@ buildscript {
     ext.kotlin_version = '1.2.31'
     ext.kotlinx_coroutines_v = '0.22.5'
     repositories {
+        maven { url 'https://maven.aliyun.com/repository/jcenter' }
+        maven { url 'https://maven.aliyun.com/repository/google' }
         jcenter()
         google()
     }
@@ -22,6 +24,8 @@ buildscript {
 
 allprojects {
     repositories {
+        maven { url 'https://maven.aliyun.com/repository/jcenter' }
+        maven { url 'https://maven.aliyun.com/repository/google' }
         jcenter()
         google()
     }
