--- a/MyApplication/lib/build.gradle
+++ b/MyApplication/lib/build.gradle
@@ -1,10 +1,21 @@
 apply plugin: 'java-library'
+apply plugin: 'kotlin'
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.google.code.gson:gson:2.4'
     implementation 'io.reactivex.rxjava2:rxjava:2.0.7'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlinx_coroutines_v"
 }
 
-sourceCompatibility = "7"
-targetCompatibility = "7"
+sourceCompatibility = 1.8
+
+
+compileKotlin {
+    kotlinOptions.jvmTarget = "1.8"
+}
+compileTestKotlin {
+    kotlinOptions.jvmTarget = "1.8"
+}
