--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
         android:name="com.gaofei.app.AppApplication"
         android:allowBackup="true"
         android:icon="@mipmap/icon"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
