--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -50,6 +50,7 @@
         <activity android:name="com.gaofei.app.act.EditTextAct" />
         <activity android:name="com.gaofei.app.act.DataBindingAct" />
         <activity android:name="com.gaofei.app.act.TaskActivity" />
+        <activity android:name="com.gaofei.app.act.AnrAct" />
         <activity
             android:name=".CanvasActivity"
             android:theme="@style/AppTheme.NoActionBar" />
