--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -51,6 +51,9 @@
         <activity android:name="com.gaofei.app.act.DataBindingAct" />
         <activity android:name="com.gaofei.app.act.TaskActivity" />
         <activity android:name="com.gaofei.app.act.AnrAct" />
+        <activity android:name=".act.webview.WebViewActivity" />
+        <activity android:name=".act.webview.WebViewTransferPageAct" />
+        <activity android:name=".act.webview.GlobalWebViewActivity" />
         <receiver android:name=".anr.TestBroadCastReceiver" >
             <intent-filter>
                 <action android:name="TestBroadCastReceiver"/>
