--- a/MyApplication/app/build.gradle
+++ b/MyApplication/app/build.gradle
@@ -68,7 +68,7 @@ dependencies {
     implementation 'com.facebook.stetho:stetho:1.5.0'
     implementation 'com.facebook.stetho:stetho-okhttp3:1.5.0'
     kapt "com.android.databinding:compiler:2.3.0"
-    compile project(':commonLibrary')
+    implementation project(':commonLibrary')
     implementation 'com.jaredrummler:android-processes:1.0.9'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
