--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -19,8 +19,7 @@
         android:networkSecurityConfig="@xml/network_security_config"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        tools:replace="android:name">
+        android:theme="@style/AppTheme">
         <activity android:name="com.gaofei.app.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -55,6 +54,7 @@
         <activity android:name=".act.webview.WebViewTransferPageAct" />
         <activity android:name=".act.webview.GlobalWebViewActivity" />
         <activity android:name=".act.AIDLActivity" />
+        <activity android:name=".act.ReferenceAct" />
         <receiver android:name=".anr.TestBroadCastReceiver" >
             <intent-filter>
                 <action android:name="TestBroadCastReceiver"/>
