--- a/MyApplication/commonLibrary/build.gradle
+++ b/MyApplication/commonLibrary/build.gradle
@@ -8,7 +8,7 @@ android {
 
     defaultConfig {
         minSdkVersion 18
-        targetSdkVersion 25
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
 
@@ -50,10 +50,11 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlinx_coroutines_v"
     api "com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30"
-    compile 'com.github.bumptech.glide:glide:4.9.0'
+    api 'com.github.bumptech.glide:glide:4.9.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
-    compile 'com.facebook.fresco:fresco:1.13.0'
-    compile 'com.facebook.fresco:animated-webp:1.3.0'
-    compile 'com.facebook.fresco:animated-gif:1.3.0'
-    compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.16'
+    api 'com.facebook.fresco:fresco:1.13.0'
+    api 'com.facebook.fresco:animated-webp:1.3.0'
+    api 'com.facebook.fresco:animated-gif:1.3.0'
+    api 'pl.droidsonroids.gif:android-gif-drawable:1.2.16'
+    api 'com.squareup.leakcanary:leakcanary-android:1.6.3'
 }
