--- a/MyApplication/build.gradle
+++ b/MyApplication/build.gradle
@@ -2,9 +2,10 @@
 
 buildscript {
     ext.kotlin_version = '1.2.51'
-    ext.kotlin_version = '1.2.41'
-    ext.kotlin_version = '1.2.31'
     ext.kotlinx_coroutines_v = '0.22.5'
+    ext.kotlin_version = '1.3.21'
+    ext.kotlinx_coroutines_core_v = '1.1.1'
+    ext.kotlin_coroutines_android_v = '1.1.1'
     repositories {
         maven { url 'https://maven.aliyun.com/repository/jcenter' }
         maven { url 'https://maven.aliyun.com/repository/google' }
