--- a/MyApplication/app/build.gradle
+++ b/MyApplication/app/build.gradle
@@ -30,6 +30,11 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
+        externalNativeBuild {
+            cmake {
+                cppFlags ""
+            }
+        }
     }
     buildTypes {
         release {
@@ -47,14 +52,17 @@ android {
         // but continue the build even when errors are found:
         abortOnError false
     }
-    dataBinding {
-        enabled = true
-    }
     productFlavors {
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    externalNativeBuild {
+        cmake {
+            path "CMakeLists.txt"
+        }
     }
 }
 
@@ -67,7 +75,6 @@ dependencies {
     implementation 'com.airbnb.android:lottie:2.1.0'
     implementation 'com.facebook.stetho:stetho:1.5.0'
     implementation 'com.facebook.stetho:stetho-okhttp3:1.5.0'
-    kapt "com.android.databinding:compiler:2.3.0"
     implementation project(':commonLibrary')
     implementation 'com.jaredrummler:android-processes:1.0.9'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
