--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -90,7 +90,7 @@
         <activity android:name="com.gaofei.app.TaskAffinityAct"   android:allowTaskReparenting="false" android:exported="true"> </activity>
 
         <activity android:name=".TransparentAct" android:taskAffinity="com.gaofei.app.TransparentAct" />
-
+    <activity android:name=".act.RXJavaAct" />
     </application>
 
 </manifest>
