--- a/MyApplication/commonLibrary/build.gradle
+++ b/MyApplication/commonLibrary/build.gradle
@@ -56,5 +56,6 @@ dependencies {
     api 'com.facebook.fresco:animated-webp:1.3.0'
     api 'com.facebook.fresco:animated-gif:1.3.0'
     api 'pl.droidsonroids.gif:android-gif-drawable:1.2.16'
-    api 'com.squareup.leakcanary:leakcanary-android:1.6.3'
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.6.3'
+    releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.6.3'
 }
