--- a/MyApplication/app/build.gradle
+++ b/MyApplication/app/build.gradle
@@ -31,8 +31,10 @@ android {
                 cppFlags ""
             }
         }
+
         javaCompileOptions {
             annotationProcessorOptions {
+                includeCompileClasspath = true
                 arguments = [ eventBusIndex : 'com.gaofei.library.MyEventBusIndex' ]
             }
         }
@@ -67,6 +69,12 @@ android {
     }
 }
 
+kapt {
+    arguments {
+        arg('eventBusIndex', 'com.example.myapp.MyEventBusIndex')
+    }
+}
+
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
@@ -82,7 +90,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlinx_coroutines_v"
-    def eventbus_version = '3.1.1'
-    api "org.greenrobot:eventbus:$eventbus_version"
-    annotationProcessor "org.greenrobot:eventbus-annotation-processor:$eventbus_version"
+    def eventbus_version = '3.2.0'
+    implementation "org.greenrobot:eventbus:$eventbus_version"
+    kapt "org.greenrobot:eventbus-annotation-processor:$eventbus_version"
 }
