--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -92,6 +92,7 @@
         <activity android:name=".TransparentAct"  android:taskAffinity="com.aa" />
         <activity android:name=".act.OKHttpClientAct"   />
     <activity android:name=".act.RXJavaAct" />
+    <activity android:name=".act.NestedAct" />
     </application>
 
 </manifest>
