feature:recycler cache

--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -93,6 +93,7 @@
         <activity android:name=".act.OKHttpClientAct"   />
     <activity android:name=".act.RXJavaAct" />
     <activity android:name=".act.NestedAct" />
+    <activity android:name=".act.RecyclerCacheAct" />
     </application>
 
 </manifest>
