--- a/MyApplication/commonLibrary/build.gradle
+++ b/MyApplication/commonLibrary/build.gradle
@@ -35,8 +35,8 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.code.gson:gson:2.4'
-    implementation 'io.reactivex.rxjava2:rxjava:2.0.7'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    api 'io.reactivex.rxjava2:rxjava:2.0.7'
+    api 'io.reactivex.rxjava2:rxandroid:2.0.1'
     implementation 'com.airbnb.android:lottie:2.1.0'
     implementation 'com.facebook.stetho:stetho:1.5.0'
     implementation 'com.facebook.stetho:stetho-okhttp3:1.5.0'
@@ -54,5 +54,6 @@ dependencies {
     api 'pl.droidsonroids.gif:android-gif-drawable:1.2.16'
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.6.3'
     releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.6.3'
+    api 'android.arch.lifecycle:reactivestreams:1.1.1'
 
 }
