--- a/MyApplication/commonLibrary/build.gradle
+++ b/MyApplication/commonLibrary/build.gradle
@@ -33,27 +33,28 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.google.code.gson:gson:2.4'
-    api 'io.reactivex.rxjava2:rxjava:2.0.7'
-    api 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    implementation 'com.airbnb.android:lottie:2.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
+    implementation 'com.google.code.gson:gson:2.8.9'
+    api 'io.reactivex.rxjava2:rxjava:2.2.20'
+    api 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation 'com.airbnb.android:lottie:3.3.0'
     implementation 'com.facebook.stetho:stetho:1.5.0'
     implementation 'com.facebook.stetho:stetho-okhttp3:1.5.0'
-    api 'com.google.android.material:material:1.0.0'
-    api 'androidx.appcompat:appcompat:1.0.0'
+    api 'com.google.android.material:material:1.4.0'
+    api 'androidx.appcompat:appcompat:1.3.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlinx_coroutines_v"
     api "com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30"
     api 'com.github.bumptech.glide:glide:4.9.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
-    api 'com.facebook.fresco:fresco:1.13.0'
-    api 'com.facebook.fresco:animated-webp:1.3.0'
-    api 'com.facebook.fresco:animated-gif:1.3.0'
+    api 'com.facebook.fresco:fresco:2.3.0'
+    api 'com.facebook.fresco:animated-webp:2.3.0'
+    api 'com.facebook.fresco:animated-gif:2.3.0'
     api 'pl.droidsonroids.gif:android-gif-drawable:1.2.16'
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.6.3'
     releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.6.3'
     api 'android.arch.lifecycle:reactivestreams:1.1.1'
+    api "androidx.recyclerview:recyclerview:1.2.1"
 
 }
