--- a/MyApplication/app/build.gradle
+++ b/MyApplication/app/build.gradle
@@ -17,11 +17,11 @@ android {
             storePassword '123456'
         }
     }
-    compileSdkVersion 30
+    compileSdkVersion 32
     defaultConfig {
         applicationId 'com.gaofei.app'
         minSdkVersion 23
-        targetSdkVersion 30
+        targetSdkVersion 32
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -32,12 +32,12 @@ android {
             }
         }
 
-        javaCompileOptions {
-            annotationProcessorOptions {
-                includeCompileClasspath = true
-                arguments = [ eventBusIndex : 'com.gaofei.library.MyEventBusIndex' ]
-            }
-        }
+//        javaCompileOptions {
+//            annotationProcessorOptions {
+//                includeCompileClasspath = true
+//                arguments = [ eventBusIndex : 'com.gaofei.library.MyEventBusIndex' ]
+//            }
+//        }
     }
     buildTypes {
         release {
@@ -58,8 +58,8 @@ android {
     productFlavors {
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
 
     externalNativeBuild {
@@ -77,9 +77,9 @@ kapt {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.google.code.gson:gson:2.4'
-    implementation 'com.airbnb.android:lottie:2.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'com.google.code.gson:gson:2.8.9'
+    implementation 'com.airbnb.android:lottie:3.3.0'
     implementation 'com.facebook.stetho:stetho:1.5.0'
     implementation 'com.facebook.stetho:stetho-okhttp3:1.5.0'
     implementation project(':commonLibrary')
