--- a/MyApplication/commonLibrary/build.gradle
+++ b/MyApplication/commonLibrary/build.gradle
@@ -4,11 +4,11 @@ apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 32
 
     defaultConfig {
         minSdkVersion 23
-        targetSdkVersion 28
+        targetSdkVersion 32
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -21,8 +21,8 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
 }
 
@@ -33,15 +33,14 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
     implementation 'com.google.code.gson:gson:2.8.9'
     api 'io.reactivex.rxjava2:rxjava:2.2.20'
     api 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'com.airbnb.android:lottie:3.3.0'
     implementation 'com.facebook.stetho:stetho:1.5.0'
     implementation 'com.facebook.stetho:stetho-okhttp3:1.5.0'
-    api 'com.google.android.material:material:1.4.0'
-    api 'androidx.appcompat:appcompat:1.3.0'
+    api 'com.google.android.material:material:1.5.0'
+    api 'androidx.appcompat:appcompat:1.4.1'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlinx_coroutines_v"
@@ -56,5 +55,7 @@ dependencies {
     releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.6.3'
     api 'android.arch.lifecycle:reactivestreams:1.1.1'
     api "androidx.recyclerview:recyclerview:1.2.1"
+    api 'androidx.constraintlayout:constraintlayout:2.1.3'
+    api 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
 
 }
