--- a/MyApplication/build.gradle
+++ b/MyApplication/build.gradle
@@ -1,14 +1,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlinx_coroutines_v = '1.3.0'
-    ext.kotlin_version = '1.3.61'
+    ext.kotlinx_coroutines_v = '1.6.4'
+    ext.kotlin_version = '1.7.10'
     ext.kotlinx_coroutines_core_v = '1.1.1'
     ext.kotlin_coroutines_android_v = '1.3.0'
     repositories {
         maven { url 'https://maven.aliyun.com/repository/jcenter' }
         maven { url 'https://maven.aliyun.com/repository/google' }
-        jcenter()
+        maven { url 'https://jitpack.io' }
+        mavenCentral()
         google()
     }
     dependencies {
@@ -26,7 +27,8 @@ allprojects {
         maven { url 'https://maven.aliyun.com/repository/jcenter' }
         maven { url 'https://maven.aliyun.com/repository/google' }
         maven { url 'https://jitpack.io' }
-        jcenter()
+        maven { url 'https://github.com' }
+        mavenCentral()
         google()
     }
 }
